--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,7 @@
 <body>
 <h1>Welcome to COVOID Tracker</h1>
 <a th:href="@{/login}">Log In</a>
+<br/>
+<a th:href="@{/register}">Register</a>
 </body>
 </html>
