--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,20 +6,25 @@
 </head>
 <body>
 <h1>Welcome to COVOID Dashboard</h1>
+<a th:href="@{/stateWiseData}">Show Table</a>
+<table th:action="@{/stateWiseData}">
 
-   <div></div>
-<div th:each="stat: ${stateWiseData}"></div>
-<table>
-    This is the table ${stateWiseData}
-    <tr th:each="stat: ${home}">
-        This is the loop
-        <td th:text="${stat.id}" />
-        <td th:text="${stat.name}" />
-        <td th:text="${stat.activeCasesCount}" />
-        <td th:text="${stat.resolvedCasesCount}" />
-        <td th:text="${stat.deathCasesCount}" />
-        <td th:text="${stat.confirmedCasesCount}" />
-        <td th:text="${stat.totalCasesCount}" />
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Active Cases Count</th>
+        <th>Resolved Cases Count</th>
+        <th>Death Cases Count</th>
+        <th>Total Cases Count</th>
+    </tr>
+    <tr th:each="stat: ${stateWiseData}">
+
+       <td th:text="${stat.id}" />
+       <td th:text="${stat.name}" />
+       <td th:text="${stat.activeCasesCount}" />
+       <td th:text="${stat.resolvedCasesCount}" />
+       <td th:text="${stat.deathCasesCount}" />
+       <td th:text="${stat.totalCasesCount}" />
     </tr>
 </table>
 
