changes for name correction

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,7 +14,7 @@
 
     <label for="password">Password</label>
     <input type="password" id="password" name="password"/>
-    <label for="confirmPassword">Password</label>
+    <label for="confirmPassword">Confirm Password</label>
     <input type="password" id="confirmPassword" name="confirmPassword"/>
     <br/>
     <input type="submit" value="Register"/>
